k8s/audio-gen-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: audio-gen
  name: audio-gen
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: audio-gen
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: audio-gen
    spec:
      containers:
        - env:
            - name: OPENAI_API_KEY
              valueFrom:
                secretKeyRef:
                  name: openai-secret
                  key: api-key
          image: learnifyacr.azurecr.io/audio-gen:latest
          name: audio-gen-iep
          ports:
            - containerPort: 5003
              protocol: TCP
      restartPolicy: Always
