k8s/eep-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: eep
  name: eep
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eep
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: eep
    spec:
      containers:
        - env:
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: app-secrets
                  key: db-password
            - name: DigiCert_CA_Cert
              valueFrom:
                secretKeyRef:
                  name: app-secrets
                  key: ca-cert
            - name: EMBEDDINGS_IEP
              value: 'https://20.233.221.128/api/embeddings'
            - name: GPT_IEP
              value: 'https://20.233.221.128/api/gpt'
            - name: AUDIO_GEN_IEP
              value: 'https://20.233.221.128/api/audio-gen'
            - name: OPENAI_API_KEY
              valueFrom:
                secretKeyRef:
                  name: app-secrets
                  key: api-key
            - name: REACT_APP_API_URL
              value: 'https://20.233.221.128/api/eep'
            - name: SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: app-secrets
                  key: secret-key
          image: learnifyacr.azurecr.io/eep:latest
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:5000/
            failureThreshold: 20
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 10
          name: eep
          ports:
            - containerPort: 5000
              protocol: TCP
      restartPolicy: Always
