k8s/embeddings-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: embeddings
  name: embeddings
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: embeddings
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: embeddings
    spec:
      containers:
        - env:
            - name: OPENAI_API_KEY
              valueFrom:
                secretKeyRef:
                  name: openai-secret
                  key: api-key
          image: learnifyacr.azurecr.io/embeddings:latest
          name: embeddings-iep
          ports:
            - containerPort: 5001
              protocol: TCP
      restartPolicy: Always
