k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: db-password
                  key: db-password
            - name: DigiCert_CA_Cert
              valueFrom:
                secretKeyRef:
                  name: ca-cert
                  key: ca-cert
            - name: EMBEDDINGS_IEP
              value: 'embeddings'
            - name: GPT_IEP
              value: 'gpt'
            - name: OPENAI_API_KEY
              valueFrom:
                secretKeyRef:
                  name: openai-secret
                  key: api-key
            - name: REACT_APP_API_URL
              value: 'http://localhost:5000'
            - name: SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: secret-key
                  key: secret-key
          image: learnifyacr.azurecr.io/frontend:latest
          name: frontend
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
