k8s/gpt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: gpt
  name: gpt
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gpt
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: gpt
    spec:
      containers:
        - env:
            - name: OPENAI_API_KEY
              valueFrom:
                secretKeyRef:
                  name: app-secrets
                  key: api-key
          image: learnifyacr.azurecr.io/gpt:latest
          name: gpt-iep
          ports:
            - containerPort: 5002
              protocol: TCP
      restartPolicy: Always
