k8s/audio_gen-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: audio-gen
  name: audio-gen
spec:
  ports:
    - name: "5003"
      port: 5003
      targetPort: 5003
    - name: "metrics"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: audio-gen
