k8s/course_creator-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.35.0
  labels:
    io.kompose.service: course-creator
  name: course-creator
spec:
  ports:
    - name: "5004"
      port: 5004
      targetPort: 5004
    - name: "metrics"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: course-creator
