k8s/embeddings-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: embeddings
  name: embeddings
spec:
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5001
    - name: "metrics"
      port: 8000
      targetPort: 8000

  selector:
    io.kompose.service: embeddings
