k8s/gpt-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: gpt
  name: gpt
spec:
  ports:
    - name: "5002"
      port: 5002
      targetPort: 5002
    - name: "metrics"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: gpt
