k8s/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  ports:
    - name: "3001"
      port: 3001
      targetPort: 3000
  selector:
    io.kompose.service: grafana
